juegos anda crear pokemon tmb
falta buscar

--- a/Views/Home/Compe.cshtml
+++ b/Views/Home/Compe.cshtml
@@ -6,27 +6,39 @@
 <div class="row" style="margin-top: 20px;">
   <div class="col-4">
     <h1> Estrategias VGC </h1>
+    <div class="card" style="width: 18rem;">
+  <img src="/img/vgc.jpg" class="card-img-top">
+  <ul class="list-group list-group-flush">
     <a href="https://youtu.be/Hol__AToYqY">El equipo del campeon explicado</a>
-    <br>
     <a href="https://victoryroadvgc.com/es/pokemon-espada-escudo-equipos-prestamo-vgc/">Equipos competitivos</a>
-    <br>
     <a href="https://pokemonshowdown.com/">Donde practicar VGC</a>
+  </ul>
+  </div>
   </div>
 
   <div class="col-4">
-    <h1> Estrategias Pokemon GO </h1>
+    <h1> Estrategias PKG </h1>
+    <div class="card" style="width: 18rem;">
+    <img src="/img/PKG.jpg" class="card-img-top">
+      <ul class="list-group list-group-flush">
     <a href="https://www.youtube.com/watch?v=TG2--m5ajKA">El combate a detalle</a>
-    <br>
     <a href="https://www.dexerto.es/pokemon/mejores-equipos-para-la-liga-superball-en-pokemon-go-1442844/">Equipos competitivos</a>
+    <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo&hl=es_419&gl=US">Donde practicar PVP</a>
+    
+  </ul>
+  </div>
   </div>
 
   <div class="col-4">
     <h1> Estrategias JCC </h1>
+    <div class="card" style="width: 18rem;">
+    <img src="/img/JCC.png" class="card-img-top">
+      <ul class="list-group list-group-flush">
     <a href="https://www.youtube.com/watch?v=7HeMO05rZXw">Modalidad explicada</a>
-    <br>
     <a href="https://www.pokemon.com/es/estrategia/estrategias-basicas-listas-para-usar-en-competiciones">Equipos competitivos</a>
-    <br>
     <a href="https://www.pokemon.com/el/jcc-pokemon/jugar-en-linea/descargar/">Donde practicar JCC</a>
+  </ul>
+  </div>
   </div>
 
 </div>
