Compe terminado index terminado

--- a/Views/Home/Compe.cshtml
+++ b/Views/Home/Compe.cshtml
@@ -1,47 +1,82 @@
 @{
-    ViewData["Title"] = "";
+  ViewData["Title"] = "";
 }
+
 <body class="letra">
 
-<div class="row" style="margin-top: 20px;">
-  <div class="col-4">
-    <h1> Estrategias VGC </h1>
-    <div class="card" style="width: 18rem;">
-  <img src="/img/vgc.jpg" class="card-img-top">
-  <ul class="list-group list-group-flush">
-    <a href="https://youtu.be/Hol__AToYqY">El equipo del campeon explicado</a>
-    <a href="https://victoryroadvgc.com/es/pokemon-espada-escudo-equipos-prestamo-vgc/">Equipos competitivos</a>
-    <a href="https://pokemonshowdown.com/">Donde practicar VGC</a>
-  </ul>
-  </div>
-  </div>
-
-  <div class="col-4">
-    <h1> Estrategias PKG </h1>
-    <div class="card" style="width: 18rem;">
-    <img src="/img/PKG.jpg" class="card-img-top">
-      <ul class="list-group list-group-flush">
-    <a href="https://www.youtube.com/watch?v=TG2--m5ajKA">El combate a detalle</a>
-    <a href="https://www.dexerto.es/pokemon/mejores-equipos-para-la-liga-superball-en-pokemon-go-1442844/">Equipos competitivos</a>
-    <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo&hl=es_419&gl=US">Donde practicar PVP</a>
+  <div class="row" style="margin-top: 20px; ">
+    <div class="col-4">
+      <h1> Estrategias VGC </h1>
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://youtu.be/Hol__AToYqY"><img src="/img/vgc.jpg" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">El equipo del campeon explicado</p>
+        </ul>
+      </div>
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://victoryroadvgc.com/es/pokemon-espada-escudo-equipos-prestamo-vgc/"><img src="/img/vgc2.jpg" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">Equipos competitivos</p>
+        </ul>
+      </div>
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://pokemonshowdown.com/"><img src="/img/vgc3.jpg" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">Donde practicar VGC</p>
+        </ul>
+      </div>
+    </div>
     
-  </ul>
-  </div>
-  </div>
 
-  <div class="col-4">
-    <h1> Estrategias JCC </h1>
-    <div class="card" style="width: 18rem;">
-    <img src="/img/JCC.png" class="card-img-top">
-      <ul class="list-group list-group-flush">
-    <a href="https://www.youtube.com/watch?v=7HeMO05rZXw">Modalidad explicada</a>
-    <a href="https://www.pokemon.com/es/estrategia/estrategias-basicas-listas-para-usar-en-competiciones">Equipos competitivos</a>
-    <a href="https://www.pokemon.com/el/jcc-pokemon/jugar-en-linea/descargar/">Donde practicar JCC</a>
-  </ul>
-  </div>
-  </div>
+    <div class="col-4">
+      <h1> Estrategias PKG </h1>
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://www.youtube.com/watch?v=TG2--m5ajKA"><img src="/img/PKG.jpg" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">El combate a detalle</p>
+        </ul>
+      </div>
 
-</div>
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;" >
+        <a href="https://www.dexerto.es/pokemon/mejores-equipos-para-la-liga-superball-en-pokemon-go-1442844/"><img src="/img/pkg2.jpg" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">Equipos competitivos</p>
+        </ul>
+      </div>
+
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo&hl=es_419&gl=US"><img src="/img/pkg3.jpg" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">Donde practicar PVP</p>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-4">
+      <h1> Estrategias JCC </h1>
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://www.youtube.com/watch?v=7HeMO05rZXw"><img src="/img/JCC.png" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">Modalidad explicada</p>
+        </ul>
+      </div>
+
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://www.pokemon.com/es/estrategia/estrategias-basicas-listas-para-usar-en-competiciones"><img src="/img/jcc2.jpg" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">Estrategias competitivas</p>
+        </ul>
+      </div>
+
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://www.pokemon.com/el/jcc-pokemon/jugar-en-linea/descargar/"><img src="/img/jcc3.png" class="card-img-top"></a>
+        <ul class="list-group list-group-flush">
+          <p class="card-text" style="color: black;">Donde practicar JCC</p>
+        </ul>
+      </div>
+    </div>
+
+  </div>
 
 
 
