--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 
 <!--Hacer apartado noticias-->
 
-<div class="row" style="margin-top: 5%;">
+<div class="row" style="margin-top: 5%; text-align: center;">
   <div class="col-4">
 
     <div class="card" style="width: 18rem;">
@@ -47,7 +47,7 @@
         
 </div>
 
-<div class="row " style="margin-top: 5%;">
+<div class="row " style="margin-top: 5%; text-align: center;">
   <div class="col-4">
     <div class="card" style="width: 18rem;">
       <a href="https://www.esportmaniacos.com/pokemon/todos-los-campeones-mundial-pokemon-2022/#:~:text=VGC%3A%20Eduardo%20%E2%80%9CEmbC%E2%80%9D%20Cunha"><img src="img/not3.jpg" class="card-img-top"></a>
