--- a/Views/Home/Compe.cshtml
+++ b/Views/Home/Compe.cshtml
@@ -40,7 +40,7 @@
       <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;" >
         <a href="https://www.dexerto.es/pokemon/mejores-equipos-para-la-liga-superball-en-pokemon-go-1442844/"><img src="/img/pkg2.jpg" class="card-img-top"></a>
         <ul class="list-group list-group-flush">
-          <p class="card-text" style="color: black;">Equipos competitivos</p>
+          <p class="card-text" style="color: black;">Pokemons del meta</p>
         </ul>
       </div>
 
@@ -64,7 +64,7 @@
       <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
         <a href="https://www.pokemon.com/es/estrategia/estrategias-basicas-listas-para-usar-en-competiciones"><img src="/img/jcc2.jpg" class="card-img-top"></a>
         <ul class="list-group list-group-flush">
-          <p class="card-text" style="color: black;">Estrategias competitivas</p>
+          <p class="card-text" style="color: black;">Estrategias básicas</p>
         </ul>
       </div>
 
