--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
 
   <div class="col-4">
     <div class="card" style="width: 18rem;">
-      <a href="https://www.youtube.com/watch?v=1T2qZkHm8VY"><img src="img/not5.jpg" class="card-img-top"></a>
+      <a href="https://youtu.be/Fw9usDUTgJA"><img src="img/not5.jpg" class="card-img-top"></a>
       <div class="card-body">
         <p class="card-text">SE FILTRA LA POKEDEX DE LOS NUEVOS JUEGOS!</p>
       </div>
