--- a/Views/Home/Juegos.cshtml
+++ b/Views/Home/Juegos.cshtml
@@ -7,7 +7,7 @@
 {
     <div class="col-3">
     <div class="card text-bg-dark mb-3" style="width: 20rem; display: flex; text-align: center;">
-        <img src="@item.FotoJuego" class="card-img-top">
+        <img src="@item.FotoJuego" class="card-img-top-2">
         <div class="card-body" >
             <h5 class="card-title">@item.Nombre</h5>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalJuegos"
