--- a/Views/Home/Compe.cshtml
+++ b/Views/Home/Compe.cshtml
@@ -14,7 +14,8 @@
         </ul>
       </div>
       <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
-        <a href="https://victoryroadvgc.com/es/pokemon-espada-escudo-equipos-prestamo-vgc/"><img src="/img/vgc2.jpg" class="card-img-top"></a>
+        <a href="https://victoryroadvgc.com/es/pokemon-espada-escudo-equipos-prestamo-vgc/"><img src="/img/vgc2.jpg"
+            class="card-img-top"></a>
         <ul class="list-group list-group-flush">
           <p class="card-text" style="color: black;">Equipos competitivos</p>
         </ul>
@@ -26,7 +27,7 @@
         </ul>
       </div>
     </div>
-    
+
 
     <div class="col-4">
       <h1> Estrategias PKG </h1>
@@ -37,15 +38,17 @@
         </ul>
       </div>
 
-      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;" >
-        <a href="https://www.dexerto.es/pokemon/mejores-equipos-para-la-liga-superball-en-pokemon-go-1442844/"><img src="/img/pkg2.jpg" class="card-img-top"></a>
+      <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
+        <a href="https://www.dexerto.es/pokemon/mejores-equipos-para-la-liga-superball-en-pokemon-go-1442844/"><img
+            src="/img/pkg2.jpg" class="card-img-top"></a>
         <ul class="list-group list-group-flush">
           <p class="card-text" style="color: black;">Pokemons del meta</p>
         </ul>
       </div>
 
       <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
-        <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo&hl=es_419&gl=US"><img src="/img/pkg3.jpg" class="card-img-top"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo&hl=es_419&gl=US"><img
+            src="/img/pkg3.jpg" class="card-img-top"></a>
         <ul class="list-group list-group-flush">
           <p class="card-text" style="color: black;">Donde practicar PVP</p>
         </ul>
@@ -62,14 +65,16 @@
       </div>
 
       <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
-        <a href="https://www.pokemon.com/es/estrategia/estrategias-basicas-listas-para-usar-en-competiciones"><img src="/img/jcc2.jpg" class="card-img-top"></a>
+        <a href="https://www.pokemon.com/es/estrategia/estrategias-basicas-listas-para-usar-en-competiciones"><img
+            src="/img/jcc2.jpg" class="card-img-top"></a>
         <ul class="list-group list-group-flush">
           <p class="card-text" style="color: black;">Estrategias básicas</p>
         </ul>
       </div>
 
       <div class="card" style="width: 18rem; text-align: center; margin-top: 8%;">
-        <a href="https://www.pokemon.com/el/jcc-pokemon/jugar-en-linea/descargar/"><img src="/img/jcc3.png" class="card-img-top"></a>
+        <a href="https://www.pokemon.com/el/jcc-pokemon/jugar-en-linea/descargar/"><img src="/img/jcc3.png"
+            class="card-img-top"></a>
         <ul class="list-group list-group-flush">
           <p class="card-text" style="color: black;">Donde practicar JCC</p>
         </ul>
