--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -68,7 +68,7 @@
       <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupSelect01">Segundo Tipo(Opcional)</label>
         <select class="form-select" id="inputGroupSelect01" name="pokemon.Tipo2">
-           <option selected>Choose...</option>
+           <option value=@null selected>Choose...</option>
           <option value="Fuego">Fuego</option>
           <option value="Agua">Agua</option>
           <option value="Planta">Planta</option>
