--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,79 +1,94 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Tp09_IgnacioDemarcico_TeoNavarro</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    @* <link rel="stylesheet" href="~/Tp09_IgnacioDemarcico_TeoNavarro.styles.css" asp-append-version="true" /> *@
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>@ViewData["Title"] - Tp09_IgnacioDemarcico_TeoNavarro</title>
+  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
+  <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+  @* <link rel="stylesheet" href="~/Tp09_IgnacioDemarcico_TeoNavarro.styles.css" asp-append-version="true" /> *@
 </head>
+
 <body background="">
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Tierlist">Tierlists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Compe">Competitivo</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Comunidad">Comunidad</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Juegos">Juegos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Anime (en construccion)</a>
-        </li>
-        <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="PokemonBusqueda">
-        <button class="btn btn-outline-success" type="submit" onclick = "VerInfoPokemon(PokemonBusqueda)">Search</button>
-      </form>
-</div>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home"
+              asp-action="Tierlist">Tierlists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Compe">Competitivo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Comunidad">Comunidad</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Juegos">Juegos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Anime (en construccion)</a>
+          </li>
+           <div class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+              name="PokemonBusqueda" id="PokemonBusqueda">
+            <button class="btn btn-outline-success" onclick="VerInfoPokemonXnombre()" data-bs-target="#ModalPokemon"
+              data-bs-toggle="modal">Search</button>
+          </div>
+      </div>
       </ul>
-        
+
     </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <main role="main" class="pb-3">
+      @RenderBody()
+    </main>
   </div>
-</nav>
-<div class="modal" tabindex="-1" id="ModalJugador">
+
+  <footer class="border-top footer text-muted fixed-bottom bg-white">
+    <div class="container" style="margin-top: 1rem; margin-bottom: 1rem;">
+      &copy; 2022 - Tp09_IgnacioDemarcico_TeoNavarro - <a asp-area="" asp-controller="Home"
+        asp-action="Privacy">Privacy</a>
+    </div>
+  </footer>
+  <script src="~/lib/jquery/dist/jquery.min.js"></script>
+  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="~/js/site.js" asp-append-version="true"></script>
+  @await RenderSectionAsync("Scripts", required: false)
+</body>
+
+
+<div class="modal" tabindex="-1" id="ModalPokemon">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
+        <h5 class="modal-title" id="ModalTitulo">Modal title</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <img id="modalP-Foto" style="height: 15rem; display: flex; margin: auto;">
+        <div id="modalP-Nombre"></div>
+        <div id="modalP-Tipo1"></div>
+        <div id="modalP-Tipo2"></div>
+        <div id="modalP-FechaCreacion"></div>
+        <div id="modalP-PAparicion"></div>
+        <div id="modalP-Altura"></div>
+        <div id="modalP-Peso"></div>
+        <div id="modalP-Pokedex"></div>
       </div>
     </div>
   </div>
 </div>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
 
-    <footer class="border-top footer text-muted fixed-bottom bg-white" >
-        <div class="container" style="margin-top: 1rem; margin-bottom: 1rem;">
-            &copy; 2022 - Tp09_IgnacioDemarcico_TeoNavarro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
 </html>
